--- a/_site.yml
+++ b/_site.yml
@@ -12,6 +12,6 @@ navbar:
     href: assignments.html
   - text: Exams
     href: exams.html
-  - text: Course Repo
+  - text: Repo
     href: https://uo-educ-quant.github.io/641/
 theme: educquant.css
