--- a/_site.yml
+++ b/_site.yml
@@ -28,7 +28,7 @@ navbar:
   right:
   - text: Assignments
     href: assignments.html
-  - text: Course repo
+  - icon: fa-github
     href: https://github.com/uo-educ-quant/641
 
 output:
