--- a/_site.yml
+++ b/_site.yml
@@ -10,20 +10,44 @@ navbar:
     href: schedule.html
   - text: Lectures
     menu: 
-      - text: "Unit 0: Intro & Sci Principles"
+      - text: "1. Intro & research design"
         href: ./slides/EDUC641_1_intro.html
-      - text: "Unit 1: Categorical descriptives"
-        href: ./slides/EDUC641_2_categ_1.html
-      - text: "Unit 2: Categorical relationships"
-        href: ./slides/EDUC641_2_categ_2.html
-      - text: "Unit 3a: Continuous descriptives"
-        href: ./slides/continuous_l1.html
-      - text: "Unit 3b: Central Limit Theorem & Inference"
-        href: ./slides/continuous_l2.html
-      - text: "Unit 4a: Continuous relationships"
-        href: ./slides/EDUC641_4_continuous_2.html
-      - text: "Unit 4b: NHST Critiques & Replicable research"
-        href: ./slides/EDUC641_4_continuous_3.html
+      - text: "2. Variables"
+        href: 
+      - text: "3. Categorical descriptives"
+        href: 
+      - text: "4. Categorical relationships I"
+        href: 
+      - text: "5. Categorical relationships II"
+        href: 
+      - text: "6. Troubling history of stats"
+        href: 
+      - text: "7. Continuous descriptives I"
+        href: 
+      - text: "8. Continuous descriptives II"
+        href: 
+      - text: "9. Z-scores and effect sizes"
+        href:
+      - text: "10. CLT I"
+        href: 
+      - text: "11. CLT II"
+        href: 
+      - text: "12. NHST"
+        href: 
+      - text: "13. One-sample t-tests"
+        href:
+      - text: "14. Continuous relationships I"
+        href: 
+      - text: "15. Continuous relationships II"
+        href: 
+      - text: "16. Continuous relationships III"
+        href:
+      - text: "17. Correlation and causality"
+        href: 
+      - text: "18. NHST critiques"
+        href:
+      - text: "Summing up"
+        href: 
 
   right:
   - text: Assignments
