--- a/_site.yml
+++ b/_site.yml
@@ -46,7 +46,7 @@ navbar:
         href: 
       - text: "18. NHST critiques"
         href:
-      - text: "Summing up"
+      - text: "19. Summing up"
         href: 
 
   right:
