--- a/_site.yml
+++ b/_site.yml
@@ -51,7 +51,7 @@ navbar:
   - text: Assignments
     href: assignments.html
   - icon: fa-github
-    href: https://github.com/uo-educ-quant/641
+    href: https://github.com/DavidDLiebowitz/EDUC641_22F
 
 output:
   html_document:
