--- a/_site.yml
+++ b/_site.yml
@@ -15,37 +15,37 @@ navbar:
       - text: "2. Measurement"
         href: ./slides/EDUC641_2_measures.html
       - text: "3. Categorical descriptives"
-        href: ./slides/EDUC641_3_categdescr.html
+        # href: ./slides/EDUC641_3_categdescr.html
       - text: "4. Categorical relationships I"
-        href: ./slides/EDUC641_4_categrel.html
+        # href: ./slides/EDUC641_4_categrel.html
       - text: "5. Categorical relationships II"
-        href: ./slides/EDUC641_4_categrel.html
+        # href: ./slides/EDUC641_4_categrel.html
       - text: "6. Troubling history of stats"
-        href: ./slides/EDUC641_6_history.html
+        # href: ./slides/EDUC641_6_history.html
       - text: "7. Continuous descriptives I"
-        href: ./slides/EDUC641_7_continuousdescr.html
+        # href: ./slides/EDUC641_7_continuousdescr.html
       - text: "8. Continuous descriptives II"
-        href: ./slides/EDUC641_7_continuousdescr.html
+        # href: ./slides/EDUC641_7_continuousdescr.html
       - text: "9. Z-scores and effect sizes"
-        href: ./slides/EDUC641_7_continuousdescr.html
+        # href: ./slides/EDUC641_7_continuousdescr.html
       - text: "10. CLT I"
-        href: ./slides/EDUC641_10_inference.html
+        # href: ./slides/EDUC641_10_inference.html
       - text: "11. CLT II"
-        href: ./slides/EDUC641_10_inference.html
+        # href: ./slides/EDUC641_10_inference.html
       - text: "12. NHST"
-        href: ./slides/EDUC641_10_inference.html
+        # href: ./slides/EDUC641_10_inference.html
       - text: "13. One-sample t-tests"
-        href: ./slides/EDUC641_10_inference.html
+        # href: ./slides/EDUC641_10_inference.html
       - text: "14. Continuous relationships I"
-        href: ./slides/EDUC641_14_continuousrel.html
+        # href: ./slides/EDUC641_14_continuousrel.html
       - text: "15. Continuous relationships II"
-        href: ./slides/EDUC641_14_continuousrel.html
+        # href: ./slides/EDUC641_14_continuousrel.html
       - text: "16. Continuous relationships III"
-        href: ./slides/EDUC641_14_continuousrel.html
+        # href: ./slides/EDUC641_14_continuousrel.html
       - text: "17. NHST critiques"
-        href: ./slides/EDUC641_17_critiques.html
+        # href: ./slides/EDUC641_17_critiques.html
       - text: "18. NHST critiques and summary"
-        href: ./slides/EDUC641_17_critiques.html
+        # href: ./slides/EDUC641_17_critiques.html
 
   right:
   - text: Assignments
