--- a/_site.yml
+++ b/_site.yml
@@ -21,7 +21,7 @@ navbar:
       - text: "5. Categorical relationships II"
         href: ./slides/EDUC641_5_categrel.html
       - text: "6. Troubling history of stats"
-        # href: ./slides/EDUC641_6_history.html
+        href: ./slides/EDUC641_6_history.html
       - text: "7. Continuous descriptives I"
         # href: ./slides/EDUC641_7_continuousdescr.html
       - text: "8. Continuous descriptives II"
