--- a/_site.yml
+++ b/_site.yml
@@ -34,13 +34,13 @@ navbar:
         href: ./slides/EDUC641_10_inference.html
       - text: "12. Z- and t-tests"
         href: ./slides/EDUC641_10_inference.html
-      - text: "13. Continuous relationships I"
+      - text: "13. Continuous relationships"
         href: ./slides/EDUC641_14_continuousrel.html
       - text: "14. Bivariate regression I"
         href: ./slides/EDUC641_15_regression.html
       - text: "15. Bivariate regression II"
         href: ./slides/EDUC641_16_residuals.html
-      - text: "16. Regression assumptions"
+      - text: "16. Bivariate regression III"
         href: ./slides/EDUC641_16_residuals.html
       - text: "17. NHST critiques"
         href: ./slides/EDUC641_17_critiques.html
