Publish Class 2 slides

--- a/_site.yml
+++ b/_site.yml
@@ -13,7 +13,7 @@ navbar:
       - text: "1. Intro & research design"
         href: ./slides/EDUC641_1_intro.html
       - text: "2. Measurement"
-        #href: ./slides/EDUC641_2_measures.html
+        href: ./slides/EDUC641_2_measures.html
       - text: "3. Categorical descriptives"
         #href: ./slides/EDUC641_3_categdescr.html
       - text: "4. Categorical relationships I"
