--- a/_site.yml
+++ b/_site.yml
@@ -15,7 +15,7 @@ navbar:
       - text: "2. Measurement"
         href: ./slides/EDUC641_2_measures.html
       - text: "3. Categorical descriptives"
-        #href: ./slides/EDUC641_3_categdescr.html
+        href: ./slides/EDUC641_3_categdescr.html
       - text: "4. Categorical relationships I"
         #href: ./slides/EDUC641_4_categrel.html
       - text: "5. Categorical relationships II"
