--- a/_site.yml
+++ b/_site.yml
@@ -39,9 +39,9 @@ navbar:
       - text: "14. Bivariate regression I"
         href: ./slides/EDUC641_14_regression.html
       - text: "15. Bivariate regression II"
-        #href: ./slides/EDUC641_15_regression2.html
+        href: ./slides/EDUC641_15_regression2.html
       - text: "16. Bivariate regression III"
-        #href: ./slides/EDUC641_15_regression2.html
+        href: ./slides/EDUC641_15_regression2.html
       - text: "17. NHST critiques"
         #href: ./slides/EDUC641_17_critiques.html
       - text: "18. NHST critiques and summary"
